tests/snapshots/newtype_structs.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
id=12345&
name=alice&
email=alice@example.com&
age=25
