tests/snapshots/newtype_structs@query.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
id=12345&
name=alice&
email=alice@example.com&
age=25
