tests/snapshots/option_types-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
opt_some_string=Hello&
opt_some_int=42&
opt_some_bool=true&
opt_some_vec[0]=1&
opt_some_vec[1]=2&
opt_some_vec[2]=3
