tests/snapshots/option_types@form.snap
---
source: tests/test_roundtrip.rs
description: "OptionTypes { opt_none: None, opt_some_string: Some(\"Hello\"), opt_some_int: Some(42), opt_some_bool: Some(true), opt_some_vec: Some([1, 2, 3]) }"
---
opt_none&
opt_some_string=Hello&
opt_some_int=42&
opt_some_bool=true&
opt_some_vec%5B0%5D=1&
opt_some_vec%5B1%5D=2&
opt_some_vec%5B2%5D=3
