tests/snapshots/phantom_data_types-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: true
snapshot_kind: text
---
value=100
