tests/snapshots/phantom_data_types-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: false
snapshot_kind: text
---
value=1000
