tests/snapshots/phantom_data_types.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: false
snapshot_kind: text
---
value=100
