tests/snapshots/phantom_data_types@form-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
value=1000
